[project]
dependencies = [
    "caveclient[cv]>=7.6.0",
    "fast-simplification>=0.1.7",
    "gpytoolbox>=0.3.3",
    "ipykernel",
    "meshio>=5.3.5",
    "pandas>=2.2.3",
    "pcg-skel>=1.3.0",
    "pyvista[all]>=0.44.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "skeletor>=1.3.0",
]
description = "Add your description here"
name = "testbed"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
