[project]
dependencies = [
    "caveclient[cv]>=7.6.0",
    "cloud-volume==12.6.2",
    "cortical-tools>=0.0.5",
    "deltalake>=1.1.4",
    "fast-simplification>=0.1.7",
    "gpytoolbox>=0.3.3",
    "ipykernel",
    "meshio>=5.3.5",
    "nglui>=3.8.2",
    "ossify",
    "pandas>=2.2.3",
    "pcg-skel>=1.3.0",
    "polars>=1.33.1",
    "pyvista[all]>=0.44.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "skeletor>=1.3.0",
]
description = "Add your description here"
name = "testbed"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[tool.uv.sources]
ossify = { path = "../ossify", editable = true }

[tool.pylance]
extraPaths = ["./ossify", "./cortical-tools"]
reportOptionalMemberAccess = false
